# meridian

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark_whole_app.py  run.sh
docs/: funding.md  simulation-architecture.md  simulation-payload-contract.md
engine/: Cargo.toml
engine/src/: config.rs  main.rs
engine/src/core/: error.rs  mod.rs  pricing.rs  treasury.rs  types.rs  wallet.rs
engine/src/db/: mod.rs  store.rs
engine/src/protocols/: acp.rs  ap2.rs  atxp.rs  catalog.rs  mod.rs  mpp.rs  remote.rs  x402.rs
engine/src/routes/: capabilities.rs  checkout.rs  events.rs  metrics.rs  mod.rs  payments.rs  products.rs  transactions.rs  wallet.rs
services/ap2/: README.md  pyproject.toml
services/ap2/src/meridian_ap2_direct/: __init__.py  contracts.py  service.py
services/ap2/tests/: test_contracts.py
services/atxp/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
services/atxp/src/: baseSepoliaAccount.ts  cdpBaseSepoliaAccount.ts  cdpTreasuryTopUp.test.ts  cdpTreasuryTopUp.ts  directTransfer.test.ts  directTransfer.ts  funding.ts  index.ts  payerAccount.ts  polygonAmoyAccount.ts  polygonServerAccount.ts  probeClient.ts  recover.ts
services/cdp/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
services/cdp/src/: index.ts  requestValidation.ts  sendTransaction.test.ts  sendTransaction.ts  signMessage.test.ts  signMessage.ts  signTypedData.test.ts  signTypedData.ts  treasury.test.ts  treasury.ts
services/stripe/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
services/stripe/src/: index.ts  mppKeys.test.ts  mppKeys.ts  mppRequest.test.ts  mppRequest.ts
sim/: main.py  pyproject.toml
sim/sim/: __init__.py  agents.py  commerce.py  economy.py  engine.py  graph.py  llm.py  memory.py  protocol_labels.py  report.py  routes.py  scenarios.py  types.py
sim/tests/: conftest.py  payload_contract_static.py  test_economy.py  test_engine.py  test_live_services.py  test_non_x402_services.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/src/: app.css  app.html
web/src/lib/: constants.ts  routePressureDisplay.ts  routeScoreDrivers.ts  simStream.contract.ts  simStream.ts  timelineMetadata.ts
web/src/lib/components/: AgentCard.svelte  ChatPanel.svelte  EconomyObservability.svelte  GraphPanel.svelte  MarketCharts.svelte  ProtocolBadge.svelte  StepIndicator.svelte  SystemLogs.svelte  Timeline.svelte  graphDemo.ts
web/src/lib/stores/: simulation.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/funding/: +page.svelte
web/src/routes/protocols/: +page.svelte
web/src/routes/sim/: +page.svelte  +page.ts
(+4 files in other folders)
