[package]
name = "meridian-engine"
version = "0.1.0"
edition = "2024"
description = "Protocol-pluggable agentic commerce simulation engine"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# Real crypto for protocol implementations
k256 = { version = "0.13", features = ["ecdsa", "sha256", "arithmetic"] }
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
tokio-stream = "0.1"
hex = "0.4"
# Real blockchain + HTTP
reqwest = { version = "0.12", features = ["json", "multipart"] }
