[project]
name = "meridian-sim"
version = "0.1.0"
description = "Agentic commerce simulation layer for Meridian"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
llm = [
    "openai>=1.0",
]
graphiti = [
    "graphiti-core>=0.5",
    "openai>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
