[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-ap2"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git",
  "ecdsa",
  "fastapi",
  "uvicorn",
  "starlette"
]

[project.scripts]
meridian-ap2-service = "meridian_ap2_direct.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_ap2_direct"]

[tool.hatch.metadata]
allow-direct-references = true
